--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ on:
 jobs:
    simple-deployment_pipeline:
      runs-on: ubuntu-latest
+     if: ${{ github.event_name == 'push' }}
      steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v2
