--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,3 +44,15 @@ jobs:
          healthcheck: "https://test-deploy-githubaction.herokuapp.com/health"
          checkstring: "ok"
          rollbackonhealthcheckfailed: true
+   tag_release:
+     needs: [Build]
+     runs-on: ubuntu-latest
+     if: ${{ github.event_name == 'push' }}
+     steps:    
+      - name: Bump version and push tag
+        uses: anothrNick/github-tag-action@1.36.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DEFAULT_BUMP: patch
+          WITH_V: true
+        
