--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
          checkstring: "ok"
          rollbackonhealthcheckfailed: true
    tag_release:
-     needs: [Build]
+     needs: [build]
      runs-on: ubuntu-latest
      if: ${{ github.event_name == 'push' }}
      steps:    
