--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,8 @@ jobs:
      needs: [build]
      runs-on: ubuntu-latest
      if: ${{ github.event_name == 'push' }}
-     steps:    
+     steps:
+      - uses: actions/checkout@v2    
       - name: Bump version and push tag
         uses: anothrNick/github-tag-action@1.36.0
         env:
