--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
            wait-on: http://localhost:5000 
    build:
      runs-on: ubuntu-latest
-     needs: simple-deployment_pipeline
+     needs: simple_testing_pipeline
      if: ${{ github.event.commits.*.message == '#skip' }}
      steps:
       - uses: actions/checkout@v2
