--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,36 @@ jobs:
          healthcheck: "https://test-deploy-githubaction.herokuapp.com/health"
          checkstring: "ok"
          rollbackonhealthcheckfailed: true
+      - name: Test Success
+        uses: rjstone/discord-webhook-notify@v1
+        if: success()
+        with: 
+           severity: info
+           username: CodingKing
+           color: '#00ff00'
+           description: Deployment was successful           
+           details: 'Mission Successful'           
+           webhookUrl: ${{ secrets.DISCORD_WEB_HOOK}}
+      - name: Test Failed
+        uses: rjstone/discord-webhook-notify@v1
+        if: failure()
+        with: 
+           severity: error
+           username: CodingKing
+           color: '#ff0000'
+           description: Deployment was unsuccessful           
+           details: 'Mission Failed' 
+           webhookUrl: ${{ secrets.DISCORD_WEB_HOOK}}
+      - name: Test cancelled
+        uses: rjstone/discord-webhook-notify@v1
+        if: cancelled()
+        with: 
+           severity: warn
+           username: CodingKing
+           color: '#ffff00'
+           description: Deployment was cancelled           
+           details: Mission error
+           webhookUrl: ${{ secrets.DISCORD_WEB_HOOK}}
    tag_release:
      needs: [build]
      runs-on: ubuntu-latest
